correction tablet version

--- a/css/main.css
+++ b/css/main.css
@@ -289,10 +289,19 @@ input {
 }
 
 .faq .content-wrapper {
+    margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+}
+
+.faq h2 {
+    margin-bottom: 40px;
+}
+
+.faq-content {
+    margin-bottom: 50px;
 }
 
 
@@ -393,81 +402,90 @@ input {
    ========================================================================== */
 @media only screen and (min-width: 768px) {
     /* Tablet Styles Here */
+
+    /* General styles */
+    .content-wrapper {
+        min-width: 640px;
+        margin: 100px 0;
+    }
+
+    /* Header area */
     header {
-        justify-content: center;
+        justify-content: space-around;
     }
 
     header .content-wrapper {
         justify-content: space-between;
     }
     .header-divider{
-        width: 0%;
+        display: none;
     }
     header nav {
-        width: 25%;
+        width: 20%;
     }
 
     header nav ul {
-        justify-content: space-evenly;
+        justify-content: space-between;
     }
 
+    /* Hero area */
+
+    /* Aside area */
     aside .content-wrapper {
+        margin: 50px 0;
         display: flex;  
-        justify-content: space-around;
+        justify-content: space-between;
         flex-flow: row wrap;
     }
 
-    aside div {
-        width: 40%;
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+        width: 35%;
         margin: 0;  
     }
 
-    .features-items{
-        width: 90%;
-        align-content: center;
-        margin: auto;
-    }
+    /* Features area */
+   
     .features article {
-        flex-basis: 30%;
-        padding:30px 60px;
-        margin: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-flow: row wrap;
-    }
-    
-    .reviews article div {
+        flex-basis: 50%;
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-flow: column wrap;
-        height: 240px;   
     }
 
-    .reviews article div img {
+    .features .features-item-description {
         width: 50%;
-        height: 200px;
     }
 
-    .reviews p, .reviews h3{
-        width:50%;
-        margin: 10px;
+    /* Reviews area */
+    .reviews article {
+        display: flex;
+        justify-content: space-between; 
     }
 
+    .reviews article div {
+        width: 49%;
+    }
+
+    /* Footer */
     footer .content-wrapper{
-        width: 90%;
+        width: 65%;
+        margin: 100px 0;
     }
 
     .footer-content {
         display: flex;
-        justify-content: space-around;
-        width: 100%;
-        align-items: flex-start;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    footer .contact {
+        margin-bottom: 0;
     }
     
-    .copyright {
+    footer .copyright {
         width: 100%;
-        text-align: center;
     }
 
 /*=========================================================
@@ -480,18 +498,17 @@ input {
     }
 
     .mission-content p {
-        width: 45%;
+        width: 40%;
     }
 
     .contact-section, .content-wrapper h2 {
-        width:85%;
-        margin: 0;
+        width:80%;
     }
 
     .contact-content {
         display: flex;
         justify-content: space-between;    
-        align-items: center;
+        align-items: flex-start;
     }
 
 /*=========================================================
@@ -505,6 +522,10 @@ input {
     .faq-content {
         flex-basis: 40%;
         margin: 0 5%;
+    }
+
+    .faq .content-wrapper {
+        justify-content: space-between;
     }
 
 }
